Adapt all features to use RecruitBuilder